    - added htmlall attribute to escape (Monte)
    - added template_exists() API function. (Andrei)
    - fixed a problem with using dynamic values for 'file'
      attribute of {include_php} tag. (Andrei)
    - added $smarty.template variable. (Andrei)
    - fixed several plugins that would not work if the plugin
      directory was not the default one. (Andrei)
    - implemented support for block functions. (Andrei)
    - made it possible to assign variables in pre/postfilter
      plugins. (Andrei)

Version 2.0.1
-------------
    - rename plugin .make_timestamp.php to shared.make_timestamp.php.
      (Monte)
    - changed crc32() generated values, replace '-' with 'N'. (Monte)
    - added support for +/- N syntax in html_select_date year values.
      (Monte)
    - fixed behavior of inserts with script attribute. (Andrei)
    - fixed bug with $smarty.cookies and $smarty.server. (Andrei)
    - wordwrap and indent are missing from 2.0 release, now fixed.
      (Monte)
    - removed show_info_header and show_info_include variables. (Monte)

Version 2.0.0
-------------
    - added "eval" function plugin for evaluating variables as
      templates. (Monte)
    - removed $tpl_file_ext class variable, no longer used. (Monte)
    - added "hex" and "hexentity" escape types to escape modifier.
      (Monte)
    - removed dependency on PEAR. (Andrei)
    - update popup_init to accept src attribute. (Monte, Duncan Forrest)
    - implemented several optimizations, speeding up Smarty
      significantly in most cases. (Andrei,Monte)
    - implemented plugin architecture. (Andrei)
    - added wordwrap and indent modifiers. (Monte)
    - added support for 'If-Modified-Since' headers for cached content.
      (Monte)
    - removed insert_tag_check class variable, no longer needed. (Monte)
    - optimized cache fetches by scanning for insert tags only if they
      exist. (Monte)
    - fixed bugs in overlib. (Monte, Duncan Forrest)